# HeCBench

./: .gitattributes  .gitignore  CMAKE_BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  PR_DESCRIPTION.md  README.md  benchmarks.yaml  clean.sh  convert_benchmarks.py  plan.md  prompts.md  run-rodinia-sycl.sh  run.sh  run_aiwc.sh
.dvc/: config
si-cuda/: CMakeLists.txt  README.md
si-cuda/src/: main.cu
si-hip/: CMakeLists.txt
si-hip/include/: host_timer.hpp
si-hip/src/: generate_dataset.cpp  main.cpp
src/: BENCHMARK_STATUS_SUMMARY.md  CMakeLists.txt  COMPILE_FIXES_RESULTS.md  CURRENT_RUNTIME_STATUS.md  DATA_GENERATION_RESULTS.md  FINAL_STATUS_SUMMARY.md  MISSING_DATA_FILES_PLAN.md  OMP_COMPILATION_SUMMARY.md  REMAINING_WORK_PLAN.md  RUNTIME_FIXES_ATTEMPTED.md  SESSION2_WINS.md  TIMEOUT_ANALYSIS.md  TIMEOUT_FINAL_RESULTS.md  TIMEOUT_SORT_RESULTS.md  compare-cuda-omp.sh  compilation-fixes-summary.md  compile-missing-binaries.sh  fix-all-makefiles-final.sh  fix-makefiles-nvc-v2.sh  fix-makefiles-nvc.sh  generate_all_data.py  runtime-fixes-summary.md  test-all-omp-v2.sh  test-all-omp.sh  test-compile-issues.sh  test-existing-binaries.sh  test-newly-compiled.sh  test-timeouts-smart.sh  test-timeouts.sh
src/accuracy-cuda/: Makefile  main.cu  reference.h
src/accuracy-hip/: CMakeLists.txt  Makefile  main.cu
src/accuracy-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/accuracy-sycl/: CMakeLists.txt  Makefile  main.cpp
src/ace-cuda/: CMakeLists.txt  Makefile  main.cu  reference.h
src/ace-hip/: CMakeLists.txt  Makefile  main.cu
src/ace-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/ace-sycl/: CMakeLists.txt  Makefile  main.cpp
src/adam-cuda/: Makefile  main.cu  reference.h
src/adam-hip/: CMakeLists.txt  Makefile  main.cu
src/adam-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/adam-sycl/: CMakeLists.txt  Makefile  main.cpp
src/adamw-cuda/: CMakeLists.txt  Makefile  kernels.h  main.cu
src/adamw-hip/: CMakeLists.txt  Makefile  kernels.h  main.cu
src/adamw-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  kernels.h  main.cpp  reference.h
src/adamw-sycl/: CMakeLists.txt  LICENSE  Makefile  kernels.h  main.cpp  reference.h
src/addBiasQKV-cuda/: CMakeLists.txt  main.cu
src/addBiasQKV-hip/: CMakeLists.txt  Makefile  main.cu
src/addBiasResidualLayerNorm-cuda/: CMakeLists.txt  Makefile  kernels.h  main.cu  reference.h
src/addBiasResidualLayerNorm-hip/: CMakeLists.txt  Makefile  kernels.h  main.cu
src/addBiasResidualLayerNorm-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  kernels.h  main.cpp
src/addBiasResidualLayerNorm-sycl/: CMakeLists.txt  Makefile  kernels.h  main.cpp
src/adjacent-cuda/: Makefile  main.cu
src/adjacent-hip/: CMakeLists.txt  Makefile  main.cu
src/adjacent-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/adjacent-sycl/: CMakeLists.txt  Makefile  block.h  main.cpp  utils.h
src/adv-cuda/: CMakeLists.txt  Makefile  adv.cu  adv.h  main.cu  reference.h
src/adv-hip/: CMakeLists.txt  Makefile  adv.cu  main.cu
src/adv-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/adv-sycl/: CMakeLists.txt  Makefile  adv.h  main.cpp
src/aes-cuda/: CMakeLists.txt  COPYRIGHT  Makefile  aes.h  main.cu  utils.cu
src/aes-hip/: CMakeLists.txt  Makefile  README  kernels.cu  main.cu
src/aes-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/aes-sycl/: CMakeLists.txt  Makefile  main.cpp
src/affine-cuda/: CMakeLists.txt  Makefile  main.cu  reference.h
src/affine-hip/: CMakeLists.txt  Makefile  main.cu
src/affine-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/affine-sycl/: CMakeLists.txt  Makefile  main.cpp
src/aidw-cuda/: CMakeLists.txt  Makefile  main.cu  reference.h
src/aidw-hip/: CMakeLists.txt  Makefile  main.cu
src/aidw-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/aidw-sycl/: CMakeLists.txt  Makefile  main.cpp
src/aligned-types-cuda/: CMakeLists.txt  main.cu
src/aligned-types-hip/: CMakeLists.txt  main.cu
src/aligned-types-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/aligned-types-sycl/: CMakeLists.txt  Makefile  main.cpp
src/all-pairs-distance-cuda/: CMakeLists.txt  Makefile  main.cu
src/all-pairs-distance-hip/: CMakeLists.txt  Makefile  Makefile.hipcl  main.cu
src/all-pairs-distance-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/all-pairs-distance-sycl/: CMakeLists.txt  Makefile  main.cpp
src/allreduce-cuda/: CMakeLists.txt  Makefile  Makefile.backup  main.cu  timer.cu
src/allreduce-hip/: CMakeLists.txt  Makefile  collectives.cu  main.cu
src/allreduce-sycl/: CMakeLists.txt  Makefile  collectives.cpp  collectives.h  main.cpp
src/amgmk-cuda/: CMakeLists.txt  COPYRIGHT_and_DISCLAIMER  Makefile  csr_matvec.cu  main.c  main.cu
src/amgmk-hip/: CMakeLists.txt  Makefile  Makefile.hipcl  laplace.cu  main.cu
src/amgmk-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  hypre_memory.cpp
src/amgmk-sycl/: CMakeLists.txt  Makefile  Makefile.hipsycl
src/ans-cuda/: CMakeLists.txt  Makefile
src/ans-hip/: CMakeLists.txt  Makefile  Makefile.hipcl
src/ans-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  README.md
src/ans-sycl/: CMakeLists.txt  Makefile
src/aobench-cuda/: CMakeLists.txt  Makefile  ao.cu
src/aobench-hip/: CMakeLists.txt  Makefile  Makefile.hipcl  README  ao.cu
src/aobench-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  ao.cpp
src/aobench-sycl/: CMakeLists.txt  Makefile  Makefile.hipsycl  ao.cpp
src/aop-cuda/: CMakeLists.txt  Makefile  main.cu
src/aop-hip/: CMakeLists.txt  Makefile  main.cu
src/aop-omp/: CMakeLists.txt  Makefile  Makefile.aomp  Makefile.nvc  main.cpp
src/aop-sycl/: CMakeLists.txt  Makefile  main.cpp
src/asmooth-cuda/: CMakeLists.txt  Makefile  main.cu  reference.cpp  reference.h
src/asmooth-hip/: CMakeLists.txt  Makefile  main.cu
(+16319 files in other folders)
