# src/CMakeLists.txt
# Benchmark discovery and registration

# Add common include directory
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

# List of benchmarks to build (will be expanded over time)
# Started with proof-of-concept, now expanding coverage
set(HECBENCH_POC_BENCHMARKS
    # Original POC
    jacobi
    bfs
    softmax
    attention
    # Batch 1: A-F alphabetically (15 benchmarks)
    accuracy
    ace
    adam
    adamw
    aes
    affine
    aidw
    amgmk
    aobench
    backprop
    bilateral
    cfd
    clenergy
    dct8x8
    fft
    # Batch 2: G-L alphabetically (15 benchmarks)
    gaussian
    geodesic
    glu
    gmm
    heartwall
    hmm
    hotspot
    hybridsort
    idivide
    interleave
    inversek2j
    ising
    knn
    lebesgue
    lud
    # Batch 3: M-P alphabetically (11 benchmarks)
    md
    md5hash
    #miniDGS
    minimod
    minkowski
    mixbench
    nn
    nw
    particlefilter
    pathfinder
    perplexity
    # Batch 4: Q-Z alphabetically (18 benchmarks - some not found)
    qtclustering
    radixsort
    randomAccess
    remap
    sad
    scan
    scatter
    srad
    sssp
    stencil
    streamcluster
    su3
    sw
    tensor
    transpose
    triad
    tsa
    xsbench
    # Batch 5: A-B benchmarks (20 benchmarks)
    adjacent
    adv
    aligned-types
    all-pairs-distance
    ans
    aop
    asmooth
    assert
    asta
    atan2
    atomicCost
    atomicIntrinsics
    atomicPerf
    atomicReduction
    babelstream
    background-subtract
    bezier-surface
    binomial
    bitonic-sort
    black-scholes
    # Batch 6: B-D benchmarks (16 benchmarks)
    blas-gemm
    burger
    bwt
    channelSum
    chi2
    clink
    cobahh
    compute-score
    convolution1D
    convolutionSeparable
    crc64
    crs
    damage
    degrid
    diamond
    dslash
    # Batch 7: D-F benchmarks (49 benchmarks)
    d2q9-bgk
    d3q19-bgk
    ddbp
    debayer
    dense-embedding
    depixel
    deredundancy
    determinant
    dispatch
    distort
    divergence
    doh
    dp
    dpid
    dropout
    dwconv
    dxtc2
    easyWave
    ecdh
    egs
    eigenvalue
    eikonal
    entropy
    epistasis
    ert
    expdist
    extend2
    extrema
    f16atomic
    f16max
    f16sp
    face
    fdtd3d
    feynman-kac
    fhd
    filter
    flame
    flip
    floydwarshall
    floydwarshall2
    fluidSim
    fma
    fpc
    fpdc
    #frechet
    fresnel
    frna
    fsm
    fwt
    # Batch 8: G-I benchmarks (39 benchmarks)
    ga
    gabor
    gamma-correction
    gc
    gd
    geam
    geglu
    gels
    gelu
    gemv
    ge-spmm
    gibbs
    goulash
    gpp
    graphB+
    graphExecution
    grep
    grrt
    gru
    haccmk
    hausdorff
    haversine
    hbc
    heat
    heat2d
    hellinger
    henry
    hexciton
    histogram
    hogbom
    hotspot3D
    hungarian
    hwt1d
    hypterm
    interval
    intrinsics-cast
    intrinsics-simd
    is
    iso2dfd
    # Batch 9: J-L benchmarks (35 benchmarks)
    jaccard
    jenkins-hash
    kalman
    keccaktreehash
    keogh
    kernelLaunch
    kiss
    kmc
    kmeans
    kurtosis
    lanczos
    langevin
    langford
    laplace
    laplace3d
    lavaMD
    layernorm
    layout
    lci
    lda
    ldpc
    lfib4
    libor
    lid-driven-cavity
    lif
    linearprobing
    logan
    log2
    logic-rewrite
    logprob
    lombscargle
    loopback
    lr
    lrn
    lsqt
    ludb
    lulesh
    lut-gemm
    lzss
    # Batch 10: M-N benchmarks (50 benchmarks)
    mallocFree
    mandelbrot
    marchingCubes
    mask
    match
    matern
    matrix-rotate
    matrixT
    maxFlops
    maxpool3d
    mcmd
    mcpr
    mdh
    meanshift
    medianfilter
    memcpy
    memtest
    merge
    merkle
    metropolis
    michalewicz
    minibude
    minisweep
    miniWeather
    minmax
    mis
    mmcsf
    mnist
    moe
    moe-sum
    morphology
    mpc
    mr
    mrc
    mrg32k3a
    mriQ
    mt
    mtf
    multimaterial
    multinomial
    murmurhash3
    mxfp4
    myocyte
    nbnxm
    nbody
    ne
    nlll
    nms
    nonzero
    norm2
    nosync
    nqueen
    ntt
    # Batch 11: O-P benchmarks (27 benchmarks)
    openmp
    opticalFlow
    overlap
    overlay
    p2p
    p4
    pad
    page-rank
    particle-diffusion
    particles
    pcc
    perlin
    permutate
    permute
    phmm
    pingpong
    pitch
    pnpoly
    pns
    pointwise
    pool
    popcount
    prefetch
    present
    prna
    projectile
    pso
    # Batch 12: Q-R benchmarks (31 benchmarks)
    qem
    qkv
    qrg
    quant3MatMul
    quantAQLM
    quantBnB
    quantVLLM
    quicksort
    radixsort2
    rainflow
    rayleighBenardConvection
    reaction
    recursiveGaussian
    relu
    resize
    resnet-kernels
    reverse
    reverse2D
    rfs
    ring
    rle
    rng-wallace
    rodrigues
    romberg
    rotary
    rowwiseMoments
    rsbench
    rsc
    rsmt
    rtm8
    rushlarsen
    # Batch 13: S benchmarks (59 benchmarks)
    s3d
    s8n
    sa
    sampling
    sc
    scan2
    scan3
    scatterAdd
    scatterThrust
    scel
    score
    sddmm-batch
    seam-carving
    secp256k1
    segment-reduce
    segsort
    sheath
    shmembench
    shuffle
    simplemoc
    simpleMultiDevice
    simpleSpmv
    slit
    #slu
    snake
    sobel
    sobol
    sort
    sortKV
    sosfil
    sparkler
    spaxpby
    spd2s
    spgeam
    spgemm
    sph
    split
    spm
    spmm
    spmv
    spnnz
    sps2d
    spsm
    spsort
    sptrsv
    ss
    ssim
    sss
    stddev
    stencil1d
    stencil3d
    streamCreateCopyDestroy
    streamOrderedAllocation
    streamPriority
    streamUM
    stsg
    surfel
    svd3x3
    sw4ck
    swish
    # Batch 14: T-Z benchmarks (33 benchmarks)
    tensorAccessor
    tensorT
    testSNAP
    thomas
    threadfence
    tissue
    tonemapping
    tpacf
    tqs
    tsne
    tsp
    unfold
    urng
    vanGenuchten
    vmc
    vol2col
    vote
    voxelization
    warpexchange
    warpsort
    wedford
    winograd
    wlcpow
    wmma
    word2vec
    wordcount
    wsm5
    wyllie
    xlqc
    zerocopy
    zeropoint
    zmddft
    zoom
    # Final batch: remaining benchmarks (63 benchmarks)
    addBiasQKV
    addBiasResidualLayerNorm
    allreduce
    atomicAggregate
    atomicCAS
    atomicSystemWide
    attentionMultiHead
    axhelm
    bh
    bicgstab
    bincount
    bitcracker
    bitpacking
    bitpermute
    blas-dot
    blas-fp8gemm
    blas-gemmBatched
    blas-gemmEx
    blas-gemmEx2
    blas-gemmStridedBatched
    blockAccess
    blockexchange
    bm3d
    bn
    bonds
    boxfilter
    bscan
    bsearch
    bspline-vgh
    bsw
    b+tree
    btree
    car
    cbsfil
    cc
    ccl
    ccs
    ccsd-trpdrv
    ced
    chacha20
    channelShuffle
    che
    chemv
    clock
    cm
    cmembench
    cmp
    collision
    colorwheel
    columnarSolver
    complex
    concat
    concurrentKernels
    contract
    conversion
    convolution3D
    cooling
    coordinates
    cross
    crossEntropy
    daphne
    gerbil
    halo-finder
    miniFE
    softmax-fused
    softmax-online
    tridiagonal
)

# Include benchmark subdirectories
foreach(BENCHMARK ${HECBENCH_POC_BENCHMARKS})
    # Check which models exist for this benchmark
    foreach(MODEL cuda hip sycl omp)
        set(BENCHMARK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${BENCHMARK}-${MODEL}")
        if(EXISTS "${BENCHMARK_DIR}/CMakeLists.txt")
            add_subdirectory(${BENCHMARK_DIR})
        endif()
    endforeach()
endforeach()

# Create category targets after all benchmarks are registered
create_category_targets()

# Print summary
print_benchmark_summary()
