[metadata]
name = torchpairwise
description = Pairwise Metrics for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/torchpairwise
download_urls = https://test_pypi.org/project/torchpairwise
project_urls =
    Source = https://github.com/inspiros/torchpairwise
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = pairwise_metric,pairwise_distance,kernel_function

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
setup_requires = torch
install_requires = torch

[options.extras_require]
examples = scipy; scikit-learn; tqdm
tests = scipy; scikit-learn; tqdm

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
    resources*

[options.package_data]
* = *.h, *.hpp, *.cuh, *.c, *.cpp, *.cu, *.
